--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,153 +1,170 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>nbconvert-online</title>
-    <style>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>nbconvert-online</title>
+  <style>
+    :root {
+      font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+      line-height: 1.5;
+      font-weight: 400;
+
+      color-scheme: light dark;
+      color: rgba(255, 255, 255, 0.87);
+      background-color: #242424;
+
+      font-synthesis: none;
+      text-rendering: optimizeLegibility;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+    a {
+      font-weight: 500;
+      color: #646cff;
+      text-decoration: inherit;
+    }
+
+    a:hover {
+      color: #535bf2;
+    }
+
+    body {
+      margin: 0;
+      display: flex;
+      place-items: center;
+      min-width: 320px;
+      min-height: 100vh;
+    }
+
+    h1 {
+      font-size: 3.2em;
+      line-height: 1.1;
+    }
+
+    #app {
+      max-width: 1280px;
+      margin: 0 auto;
+      padding: 2rem;
+      text-align: center;
+    }
+
+    .logo {
+      height: 6em;
+      padding: 1.5em;
+      will-change: filter;
+      transition: filter 300ms;
+    }
+
+    .logo:hover {
+      filter: drop-shadow(0 0 2em #646cffaa);
+    }
+
+    .logo.vanilla:hover {
+      filter: drop-shadow(0 0 2em #f7df1eaa);
+    }
+
+    .card {
+      padding: 2em;
+    }
+
+    .read-the-docs {
+      color: #888;
+    }
+
+    button {
+      border-radius: 8px;
+      border: 1px solid transparent;
+      padding: 0.6em 1.2em;
+      font-size: 1em;
+      font-weight: 500;
+      font-family: inherit;
+      background-color: #1a1a1a;
+      cursor: pointer;
+      transition: border-color 0.25s;
+    }
+
+    button:hover {
+      border-color: #646cff;
+    }
+
+    button:focus,
+    button:focus-visible {
+      outline: 4px auto -webkit-focus-ring-color;
+    }
+
+    input {
+      border-radius: 8px;
+      border: 1px solid transparent;
+      padding: 0.6em 1.2em;
+      font-size: 1em;
+      font-weight: 500;
+      font-family: inherit;
+      background-color: #1a1a1a;
+      cursor: pointer;
+      transition: border-color 0.25s;
+    }
+
+    input:hover {
+      border-color: #646cff;
+    }
+
+    input:focus,
+    input:focus-visible {
+      outline: 4px auto -webkit-focus-ring-color;
+    }
+
+    ::file-selector-button {
+      display: none;
+    }
+
+    code {
+      display: block;
+      white-space: pre-wrap;
+      text-align: left;
+    }
+
+    @media (prefers-color-scheme: light) {
       :root {
-        font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-        line-height: 1.5;
-        font-weight: 400;
-
-        color-scheme: light dark;
-        color: rgba(255, 255, 255, 0.87);
-        background-color: #242424;
-
-        font-synthesis: none;
-        text-rendering: optimizeLegibility;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
+        color: #213547;
+        background-color: #ffffff;
       }
 
-      a {
-        font-weight: 500;
-        color: #646cff;
-        text-decoration: inherit;
-      }
       a:hover {
-        color: #535bf2;
-      }
-
-      body {
-        margin: 0;
-        display: flex;
-        place-items: center;
-        min-width: 320px;
-        min-height: 100vh;
-      }
-
-      h1 {
-        font-size: 3.2em;
-        line-height: 1.1;
-      }
-
-      #app {
-        max-width: 1280px;
-        margin: 0 auto;
-        padding: 2rem;
-        text-align: center;
-      }
-
-      .logo {
-        height: 6em;
-        padding: 1.5em;
-        will-change: filter;
-        transition: filter 300ms;
-      }
-      .logo:hover {
-        filter: drop-shadow(0 0 2em #646cffaa);
-      }
-      .logo.vanilla:hover {
-        filter: drop-shadow(0 0 2em #f7df1eaa);
-      }
-
-      .card {
-        padding: 2em;
-      }
-
-      .read-the-docs {
-        color: #888;
+        color: #747bff;
       }
 
       button {
-        border-radius: 8px;
-        border: 1px solid transparent;
-        padding: 0.6em 1.2em;
-        font-size: 1em;
-        font-weight: 500;
-        font-family: inherit;
-        background-color: #1a1a1a;
-        cursor: pointer;
-        transition: border-color 0.25s;
-      }
-      button:hover {
-        border-color: #646cff;
-      }
-      button:focus,
-      button:focus-visible {
-        outline: 4px auto -webkit-focus-ring-color;
+        background-color: #f9f9f9;
       }
 
       input {
-        border-radius: 8px;
-        border: 1px solid transparent;
-        padding: 0.6em 1.2em;
-        font-size: 1em;
-        font-weight: 500;
-        font-family: inherit;
-        background-color: #1a1a1a;
-        cursor: pointer;
-        transition: border-color 0.25s;
+        background-color: #f9f9f9;
       }
-      input:hover {
-        border-color: #646cff;
-      }
-      input:focus,
-      input:focus-visible {
-        outline: 4px auto -webkit-focus-ring-color;
-      }
+    }
+  </style>
+</head>
 
-      ::file-selector-button {
-        display: none;
-      }
-
-      code {
-        display: block;
-        white-space: pre-wrap;
-        text-align: left;
-      }
-
-      @media (prefers-color-scheme: light) {
-        :root {
-          color: #213547;
-          background-color: #ffffff;
-        }
-        a:hover {
-          color: #747bff;
-        }
-        button {
-          background-color: #f9f9f9;
-        }
-        input {
-          background-color: #f9f9f9;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="app">
-      <h1>nbconvert online</h1>
-      <% if (locals.content) { %>
-        <div><%= locals.content %></div>
-        <code><%= locals.errorMessage %></code>
+<body>
+  <div id="app">
+    <h1>nbconvert online</h1>
+    <% if (locals.content) { %>
+      <div>
+        <%= locals.content %>
+      </div>
+      <code>
+        <%= locals.errorMessage %>
+      </code>
       <% } else { %>
         <form action="/upload" method="post" enctype="multipart/form-data">
-          <input id="file" name="ipynb" type="file"/>
+          <input id="file" name="ipynb" type="file" accept=".ipynb" />
           <button>Upload</button>
         </form>
-      <% } %>
-    </div>
-  </body>
+        <% } %>
+  </div>
+</body>
+
 </html>
